핫딜 정보 추가

--- a/public/main.html
+++ b/public/main.html
@@ -12,6 +12,11 @@
     src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
   />
 </a>
+<a id="kakao-link-btn2" href="javascript:sendLinkHotDeal()">
+  <img
+    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
+  />
+</a>
 <p id="login"></p>
 </body>
 </html>
